--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -19,9 +19,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/AvtoURIB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-net-2.0.jar=lib\\commons-net-2.0.jar
+file.reference.URBD1SLib.jar=lib\\URBD1SLib.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-net-2.0.jar}:\
+    ${file.reference.URBD1SLib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
