--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,5 @@
+application.title=AvtoURIB
+application.vendor=\u0410\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -18,14 +20,17 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/AvtoURIB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.AvtoURIB-Help=Help
 file.reference.commons-net-2.0.jar=lib\\commons-net-2.0.jar
 file.reference.URBD1SLib.jar=lib\\URBD1SLib.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-net-2.0.jar}:\
-    ${file.reference.URBD1SLib.jar}
+    ${file.reference.URBD1SLib.jar}:\
+    ${file.reference.AvtoURIB-Help}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
