--- a/nbproject/genfiles.properties
+++ b/nbproject/genfiles.properties
@@ -6,3 +6,6 @@ build.xml.stylesheet.CRC32=958a1d3e
 nbproject/build-impl.xml.data.CRC32=bd744773
 nbproject/build-impl.xml.script.CRC32=1b5ec2cb
 nbproject/build-impl.xml.stylesheet.CRC32=576378a2@1.32.1.45
+nbproject/profiler-build-impl.xml.data.CRC32=bd744773
+nbproject/profiler-build-impl.xml.script.CRC32=abda56ed
+nbproject/profiler-build-impl.xml.stylesheet.CRC32=42cb6bcf@1.9.1
