--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,15 +22,13 @@ dist.jar=${dist.dir}/AvtoURIB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.AvtoURIB-Help=Help
 file.reference.commons-net-2.0.jar=lib\\commons-net-2.0.jar
 file.reference.URBD1SLib.jar=lib\\URBD1SLib.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-net-2.0.jar}:\
-    ${file.reference.URBD1SLib.jar}:\
-    ${file.reference.AvtoURIB-Help}
+    ${file.reference.URBD1SLib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
