--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
 application.title=AvtoURIB
-application.vendor=support
+application.vendor=Dmitrij S. Shakhtanov, Dmitrij A. Pavljuchenko
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
