fix: исправлено расписание, поправлено удаление задачи. мелкие баги

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,13 +22,17 @@ dist.jar=${dist.dir}/AvtoURIB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-logging-1.1.jar=C:\\Documents and Settings\\support.MNY\\\u0420\u0430\u0431\u043e\u0447\u0438\u0439 \u0441\u0442\u043e\u043b\\quartz-1.7.3\\lib\\commons-logging-1.1.jar
 file.reference.commons-net-2.0.jar=lib\\commons-net-2.0.jar
+file.reference.quartz-1.7.3.jar=C:\\Documents and Settings\\support.MNY\\\u0420\u0430\u0431\u043e\u0447\u0438\u0439 \u0441\u0442\u043e\u043b\\quartz-1.7.3\\quartz-1.7.3.jar
 file.reference.URBD1SLib.jar=lib\\URBD1SLib.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-net-2.0.jar}:\
-    ${file.reference.URBD1SLib.jar}
+    ${file.reference.URBD1SLib.jar}:\
+    ${file.reference.quartz-1.7.3.jar}:\
+    ${file.reference.commons-logging-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +59,7 @@ jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
-main.class=Interface.MainFrame
+main.class=Interface.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
