--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,9 +22,9 @@ dist.jar=${dist.dir}/AvtoURIB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-logging-1.1.jar=C:\\Documents and Settings\\support.MNY\\\u0420\u0430\u0431\u043e\u0447\u0438\u0439 \u0441\u0442\u043e\u043b\\quartz-1.7.3\\lib\\commons-logging-1.1.jar
+file.reference.commons-logging-1.1.jar=C:\\Documents and Settings\\support.MNY\\\u0420\u0430\u0431\u043E\u0447\u0438\u0439 \u0441\u0442\u043E\u043B\\quartz-1.7.3\\lib\\commons-logging-1.1.jar
 file.reference.commons-net-2.0.jar=lib\\commons-net-2.0.jar
-file.reference.quartz-1.7.3.jar=C:\\Documents and Settings\\support.MNY\\\u0420\u0430\u0431\u043e\u0447\u0438\u0439 \u0441\u0442\u043e\u043b\\quartz-1.7.3\\quartz-1.7.3.jar
+file.reference.quartz-1.7.3.jar=C:\\Documents and Settings\\support.MNY\\\u0420\u0430\u0431\u043E\u0447\u0438\u0439 \u0441\u0442\u043E\u043B\\quartz-1.7.3\\quartz-1.7.3.jar
 file.reference.URBD1SLib.jar=lib\\URBD1SLib.jar
 includes=**
 jar.compress=false
@@ -76,3 +76,5 @@ run.test.classpath=\
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
+version.dir=version
+versionBuild=${version.dir}/version.properties/BUILD
