--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,7 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 application.title=AvtoURIB
 application.vendor=Dmitrij S. Shakhtanov, Dmitrij A. Pavljuchenko
 build.classes.dir=${build.dir}/classes
@@ -22,20 +26,27 @@ dist.jar=${dist.dir}/AvtoURIB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-logging-1.1.jar=C:\\Documents and Settings\\support.MNY\\\u0420\u0430\u0431\u043E\u0447\u0438\u0439 \u0441\u0442\u043E\u043B\\quartz-1.7.3\\lib\\commons-logging-1.1.jar
-file.reference.commons-net-2.0.jar=lib\\commons-net-2.0.jar
-file.reference.quartz-1.7.3.jar=C:\\Documents and Settings\\support.MNY\\\u0420\u0430\u0431\u043E\u0447\u0438\u0439 \u0441\u0442\u043E\u043B\\quartz-1.7.3\\quartz-1.7.3.jar
-file.reference.URBD1SLib.jar=lib\\URBD1SLib.jar
+file.reference.commons-email-1.2.jar=..\\..\\AUTOURIB_18062010\\URBD\\lib\\commons-email-1.2.jar
+file.reference.commons-logging-1.1.jar=lib/commons-logging-1.1.jar
+file.reference.commons-net-3.1.jar=lib/commons-net-3.1.jar
+file.reference.mail.jar=..\\..\\AUTOURIB_18062010\\URBD\\lib\\mail.jar
+file.reference.quartz-1.8.6.jar=lib/quartz-1.8.6.jar
+file.reference.slf4j-api-1.6.6.jar=lib/slf4j-api-1.6.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-net-2.0.jar}:\
-    ${file.reference.URBD1SLib.jar}:\
-    ${file.reference.quartz-1.7.3.jar}:\
-    ${file.reference.commons-logging-1.1.jar}
+    ${file.reference.commons-net-3.1.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.quartz-1.8.6.jar}:\
+    ${file.reference.slf4j-api-1.6.6.jar}:\
+    ${file.reference.commons-email-1.2.jar}:\
+    ${file.reference.mail.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -50,6 +61,9 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.commons-email-1.2.jar=../../AUTOURIB_18062010/URBD/lib/commons-email-1.2-javadoc.jar
+javadoc.reference.commons-net-3.1.jar=lib/apidocs
+javadoc.reference.quartz-1.8.6.jar=lib/quartz-1.8.6/docs/api
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -62,6 +76,7 @@ jnlp.signed=false
 main.class=Interface.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
@@ -74,6 +89,9 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.commons-email-1.2.jar=../../AUTOURIB_18062010/URBD/lib/commons-email-1.2-sources.jar
+source.reference.commons-net-3.1.jar=lib/commons-net-3.1-sources.jar
+source.reference.quartz-1.8.6.jar=lib/quartz-1.8.6/quartz/src/main/java\\
 src.dir=src
 test.src.dir=test
 version.dir=version
